# trimtokens

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  LanceTrim.bat  README.md  TrimTokens.md  build.py  config.example.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
src/trimtokens/: __init__.py  cli.py  config.py  core.py  exceptions.py  logging_setup.py  models.py  stats.py
src/trimtokens/cleaners/: __init__.py  heuristics.py  page_merge.py  pipeline.py  steps.py
src/trimtokens/extractors/: __init__.py  _encoding.py  docx.py  html.py  image.py  pdf.py  pptx.py  rtf.py  txt_md.py  xlsx_csv.py
src/trimtokens/gui/: __init__.py  __main__.py  app.py  services.py  state.py  utils.py
src/trimtokens/ocr/: __init__.py  backend.py  cache.py  engine.py  parallel.py  preprocess.py
src/trimtokens/renderer/: __init__.py  markdown.py
tests/: conftest.py  test_build.py  test_cli.py  test_config.py  test_extractors.py  test_extras_guards.py  test_gui.py  test_gui_state.py  test_heuristics.py  test_logging.py  test_ocr.py  test_ocr_backend.py  test_ocr_parallel.py  test_page_merge.py  test_pipeline.py  test_pipeline_steps.py  test_profile.py  test_renderer.py  test_smoke.py  test_stats.py
